--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,19 @@
         android:textStyle="bold" />
 
     <EditText
+        android:id="@+id/username_entry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/username_entry"
         android:layout_below="@+id/sign_in_text_view"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:background="#361d00"
         android:hint="Username"
+        android:padding="10dp"
         android:textColor="@color/white"
-        android:textColorHint="#8c8c8c"
-        android:layout_margin="20dp"
-        android:padding="10dp"/>
+        android:textColorHint="#8c8c8c" />
 
     <EditText
         android:layout_width="match_parent"
@@ -70,13 +73,16 @@
         android:layout_margin="20dp"/>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/create_account_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/create_account_button"
-        android:text="Create Account"
-        android:backgroundTint="#ad5f00"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="#ad5f00"
+        android:text="Create Account" />
 
 </RelativeLayout>
